--- a/e_commerce_app/templates/e_commerce_app/header.html
+++ b/e_commerce_app/templates/e_commerce_app/header.html
@@ -1,13 +1,13 @@
 
-<header>
-    <div class="navbar bg-base-100">
+<header class="mb-0">
+    <div class="navbar bg-base-100 mb-0">
         <div class="flex-1">
           <a class="btn btn-ghost text-xl">Gokul-Kart</a>
         </div>
         <input
             type="text"
             placeholder="Type here"
-            class="input input-bordered input-error w-full max-w-xs" />
+            class="input input-bordered input-error w-full max-w-xs sm=hidden"/>
         <div class="flex-none">
           <div class="dropdown dropdown-end">
             <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
