--- a/e_commerce_app/templates/e_commerce_app/home.html
+++ b/e_commerce_app/templates/e_commerce_app/home.html
@@ -1,6 +1,7 @@
 {% extends 'e_commerce_app/base.html'%}
 
 
+{% include 'e_commerce_app/header.html'%}
 {% block content%}
-    <h1>Home</h1>
+
 {% endblock %}
