--- a/e_commerce_app/templates/e_commerce_app/login.html
+++ b/e_commerce_app/templates/e_commerce_app/login.html
@@ -1,39 +1,16 @@
 {% extends 'e_commerce_app/base.html'%}
 
 {% block content%}
-<div class="flex items-center justify-center min-h-screen bg-gray-100 mt-0">
-  <div class="w-1/4 sm=w-1/6 md=w-1/5 mx-auto ">
-        <form method="post" action="{% url 'login' %}" class="flex flex-col gap-4">
-          {% csrf_token%}
-          <label class="input input-bordered flex items-center gap-2">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 16 16"
-              fill="currentColor"
-              class="h-4 w-4 opacity-70">
-              <path
-                d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
-              <path
-                d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
-            </svg>
-            <input type="text" class="grow" placeholder="Email" name="email" value="{{form.value.email}}" />
-          </label>
-          <label class="input input-bordered flex items-center gap-2">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 16 16"
-              fill="currentColor"
-              class="h-4 w-4 opacity-70">
-              <path
-                fill-rule="evenodd"
-                d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
-                clip-rule="evenodd" />
-            </svg>
-            <input type="password" class="grow" name="password" value="{{form.value.password}}" />
-          </label>
-        <button class="btn border-2 bg-red-500 grow">Submit</button>
-        </form>
-        <p>Don't have an account?<a href="/signup/">Please sign up</a></p>
-    </div>
-</div>
+  <div class="flex items-center justify-center mt-48">
+    <form class="flex flex-col" action="" method="post">
+      {% csrf_token %}
+      <label>Email
+        <input name="email" type="text"/>
+      </label>
+      <label>Password
+        <input name="password" type="password"/>
+      </label>
+      <button class="btn bg-red-400 ">Submit</button>
+    </form>
+  </div>
 {% endblock%}
