--- a/e_commerce_app/templates/e_commerce_app/signup.html
+++ b/e_commerce_app/templates/e_commerce_app/signup.html
@@ -1,79 +1,31 @@
 {% extends 'e_commerce_app/base.html'%}
 
 {% block content%}
-
-  <div class="flex items-center justify-center min-h-screen bg-gray-100 ">
-    <div class="w-1/3 sm=w-1/4 md=w-1/5 mx-auto flex flex-col gap-4 overflow-hidden">
-      <form method="post" action="{% url 'signup' %}" class="flex flex-col gap-4">
+  <div class="flex items-center justify-center mx-auto mt-48 ">
+    <div class="flex flex-col">
+      <form method="post" action="" class="flex flex-col items-center justify-center mx-auto">
         {% csrf_token %}
-        <div class="gap-4 flex flex-row mx-auto max-w-full shrink" >
-          <label class="max-w-full shrink input input-bordered flex items-center gap-2">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 16 16"
-              fill="currentColor"
-              class="h-4 w-4 opacity-70">
-              <path
-                d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.284 1.139.872 1.139h9.47Z" />
-            </svg>
-            <input type="text" class="w-x-xs grow border-0 focus:outline-none" placeholder="Firstname" name="firstname" value="{{ form.value.firstname}}" />
+        <div class="">
+          <label>First Name
+            <input type="text" name="firstname"/>
           </label>
-
-          <label class="max-w-full shrink input input-bordered flex items-center gap-2">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 16 16"
-              fill="currentColor"
-              class="h-4 w-4 opacity-70">
-              <path
-                d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />
-            </svg>
-            <input type="text" class="grow border-0 focus:outline-none" placeholder="Lastname" name="lastname" value="{{form.value.lastname}}"/>
+          <label>Last Name
+            <input type="text" name="lastname"/>
           </label>
         </div>
-
-        <label class=" input input-bordered flex items-center gap-2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 16 16"
-            fill="currentColor"
-            class="h-4 w-4 opacity-70">
-            <path
-              d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
-            <path
-              d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
-          </svg>
-          <input type="text" class="grow border-0 focus:outline-none" placeholder="Email" name="email" value="{{form.value.email}}"/>
+        <label class="grow w-full flex flex-row">Username
+          <input name="username" type="text" class="w-full"/>
         </label>
-        <label class="input input-bordered flex items-center gap-2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 16 16"
-            fill="currentColor"
-            class="h-4 w-4 opacity-70">
-            <path
-              d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />
-          </svg>
-          <input type="text" class="grow border-0 focus:outline-none" placeholder="Username" name="username" value="{{form.value.username}}"/>
+        <label class="grow w-full flex flex-row">Email
+          <input name="email" type="email"/>
         </label>
-        <label class="input input-bordered flex items-center gap-2">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 16 16"
-            fill="currentColor"
-            class="h-4 w-4 opacity-70">
-            <path
-              fill-rule="evenodd"
-              d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
-              clip-rule="evenodd" />
-          </svg>
-          <input type="password" class="grow border-0 focus:outline-none" value="password" name="password" value="{{form.value.password}}"/>
-        </label>        
-      <button class="btn border-2 bg-red-500">Submit</button>
+        <label class="grow w-full flex flex-row">Password
+          <input name="password" type="password"/>
+        </label>
+        <button type="buttton "class="btn bg-red-400 ">Submit</button>
       </form>
-      <p>Already have an account? <a href="/"> Sign In</a></P>
+      
+      <p>Already have an account? <a href="{%url 'login'%}">Sign In</p>
     </div>
   </div>
-{% endblock %}
- 
- 
+{% endblock%}
